# decline-curve-analysis-for-oil-gas-wells-in-the-bakken-formation-in-north-dakota

./: Bakken production data - decline curve for MCK.ipynb  Bakken production data - decline curve for MCK.py  README.md  article.md  config.yaml  generate_plot.py  pyproject.toml
